--- a/Hienthi.html
+++ b/Hienthi.html
@@ -193,34 +193,38 @@
                CNTT LHU</p>
        </div>
    </footer>
-<script>
+   <script>
+    function deleteCookie(cookieName) {
+    document.cookie = `${cookieName}=; expires=Thu, 01 Jan 1970 00:00:00 UTC`;
+  }
 document.addEventListener('DOMContentLoaded', function () {
-   const loggedInUser = localStorage.getItem('loggedInUser');
-   const userGreeting = document.getElementById('user-greeting');
-   const loginLink = document.querySelector('a[href="Sign-Up.html"]');
+    const loggedInUser = localStorage.getItem('loggedInUser');
+    const userGreeting = document.getElementById('user-greeting');
+    const loginLink = document.querySelector('a[href="Sign-Up.html"]');
 
-   if (loggedInUser) {
-       // Đã đăng nhập, hiển thị tên người dùng và liên kết "Đăng Xuất"
-       if (userGreeting) {
-           userGreeting.textContent = `Xin chào, ${loggedInUser}`;
-       }
+    if (loggedInUser) {
+        // Đã đăng nhập, hiển thị tên người dùng và liên kết "Đăng Xuất"
+        if (userGreeting) {
+            userGreeting.textContent = `Xin chào, ${loggedInUser}`;
+        }
 
-       const logoutButton = document.createElement('a');
-       logoutButton.textContent = 'Đăng Xuất';
-       logoutButton.href = '#';
+        const logoutButton = document.createElement('a');
+        logoutButton.textContent = 'Đăng Xuất';
+        logoutButton.href = '#';
 
-       // Xử lý sự kiện đăng xuất
-       logoutButton.addEventListener('click', () => {
-           // Xóa thông tin đăng nhập và quay trở lại trang đăng nhập
-           localStorage.removeItem('loggedInUser');
-           window.location.href = 'Sign-Up.html';
-       });
+        // Xử lý sự kiện đăng xuất
+        logoutButton.addEventListener('click', () => {
+            // Xóa thông tin đăng nhập và quay trở lại trang đăng nhập
+            deleteCookie('ss')
+            localStorage.removeItem('loggedInUser');
+            window.location.href = 'Sign-Up.html';
+        });
 
-       // Thay thế liên kết "Đăng Nhập" bằng liên kết "Đăng Xuất"
-       if (loginLink) {
-           loginLink.replaceWith(logoutButton);
-       }
-   }
+        // Thay thế liên kết "Đăng Nhập" bằng liên kết "Đăng Xuất"
+        if (loginLink) {
+            loginLink.replaceWith(logoutButton);
+        }
+    }
 });
 
 </script>
