--- a/index.html
+++ b/index.html
@@ -533,10 +533,14 @@
 // Lưu mã bài viết vào localStorage
 localStorage.setItem("selectedMaBai", MaBai);
 // Chuyển trang
+
+function formatCurrency(number) {
+      return number.toLocaleString('vi-VN');
+    }
 window.location.href = `thongtinbaidang.html`;
 
   }
-
+  const numberOfImages = 9;
   fetch('https://apple4car.onrender.com/posts', requestOptions)
     .then(response => response.json())
     .then(data => {
@@ -557,13 +561,23 @@ window.location.href = `thongtinbaidang.html`;
           productLocation.textContent = `Địa Điểm: ${post.DiaDiemCoXe}`;
 
           const productPrice = document.createElement("p");
-          productPrice.textContent = `Giá Thuê: ${post.GiaThue} VNĐ/ngày`;
+          productPrice.textContent = "Giá Thuê: "+ formatCurrency(post.GiaThue) +  " VNĐ/Ngày";
+          // p.textContent = "Giá thuê: " + formatCurrency(xe.Gia) + " VND/ Ngày";
 
           const productImage = document.createElement("img");
-          productImage.className = "product-image";
-          productImage.src = post.HinhAnh;
-          productImage.alt = post.TenBaiDang;
+                productImage.className = "product-image";
 
+                // Tạo số ngẫu nhiên từ 1 đến numberOfImages
+                const randomImageNumber = Math.floor(Math.random() * numberOfImages) + 1;
+
+                // Kết hợp số ngẫu nhiên với tên tệp ảnh cố định
+                const imageFileName = `xe${randomImageNumber}.jpg`;
+
+                // Tạo đường dẫn đầy đủ đến tệp ảnh
+                const fullImagePath = `./assets/images/imagesXe/${imageFileName}`;
+
+                        productImage.src = fullImagePath;
+                        productImage.alt = post.HinhAnh;
           
           productItem.appendChild(productName);
           productItem.appendChild(productLocation);
@@ -730,36 +744,40 @@ window.location.href = `thongtinbaidang.html`;
         </script>
 
 <script>
-  document.addEventListener('DOMContentLoaded', function () {
-      const loggedInUser = localStorage.getItem('loggedInUser');
-      const userGreeting = document.getElementById('user-greeting');
-      const loginLink = document.querySelector('a[href="Sign-Up.html"]');
-  
-      if (loggedInUser) {
-          // Đã đăng nhập, hiển thị tên người dùng và liên kết "Đăng Xuất"
-          if (userGreeting) {
-              userGreeting.textContent = `Xin chào, ${loggedInUser}`;
-          }
-  
-          const logoutButton = document.createElement('a');
-          logoutButton.textContent = 'Đăng Xuất';
-          logoutButton.href = '#';
-  
-          // Xử lý sự kiện đăng xuất
-          logoutButton.addEventListener('click', () => {
-              // Xóa thông tin đăng nhập và quay trở lại trang đăng nhập
-              localStorage.removeItem('loggedInUser');
-              window.location.href = 'Sign-Up.html';
-          });
-  
-          // Thay thế liên kết "Đăng Nhập" bằng liên kết "Đăng Xuất"
-          if (loginLink) {
-              loginLink.replaceWith(logoutButton);
-          }
+  function deleteCookie(cookieName) {
+  document.cookie = `${cookieName}=; expires=Thu, 01 Jan 1970 00:00:00 UTC`;
+}
+document.addEventListener('DOMContentLoaded', function () {
+  const loggedInUser = localStorage.getItem('loggedInUser');
+  const userGreeting = document.getElementById('user-greeting');
+  const loginLink = document.querySelector('a[href="Sign-Up.html"]');
+
+  if (loggedInUser) {
+      // Đã đăng nhập, hiển thị tên người dùng và liên kết "Đăng Xuất"
+      if (userGreeting) {
+          userGreeting.textContent = `Xin chào, ${loggedInUser}`;
       }
-  });
-  
-  </script>
+
+      const logoutButton = document.createElement('a');
+      logoutButton.textContent = 'Đăng Xuất';
+      logoutButton.href = '#';
+
+      // Xử lý sự kiện đăng xuất
+      logoutButton.addEventListener('click', () => {
+          // Xóa thông tin đăng nhập và quay trở lại trang đăng nhập
+          deleteCookie('ss')
+          localStorage.removeItem('loggedInUser');
+          window.location.href = 'Sign-Up.html';
+      });
+
+      // Thay thế liên kết "Đăng Nhập" bằng liên kết "Đăng Xuất"
+      if (loginLink) {
+          loginLink.replaceWith(logoutButton);
+      }
+  }
+});
+
+</script>
 </body>
 
 </html>
