--- a/thongtinbaidang.html
+++ b/thongtinbaidang.html
@@ -30,8 +30,10 @@
 
 
 #product-details{
-    text-align: center;
-      padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
         #product-image{
             display: flex;
