--- a/thongtinbaidang.html
+++ b/thongtinbaidang.html
@@ -29,13 +29,13 @@
     <style>
 
 
-#product-details{
+.product-details{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
-        #product-image{
+       .product-image{
             display: flex;
     justify-content: center;
     align-items: center;
