--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords"
     content="​Book a car rental near you by giving us a call!, ​Best car &amp;amp; van rentals from top suppliers, ​Best valued deals from top car rental companies in USA, ​​Rent the perfect car, ​Car Rental Traveler Information, Car Rentals from $14">
   <meta name="description" content="">
-  <title>index</title>
+  <title>Trang Chủ</title>
   <link rel="stylesheet" href="./assets/css/nicepage.css" media="screen">
   <link rel="stylesheet" href="./assets/css/Home.css" media="screen">
   <script class="u-script" type="text/javascript" src="./assets/js/jquery.js" defer=""></script>
